unhardcodes lobby music

--- a/.gitignore
+++ b/.gitignore
@@ -217,6 +217,7 @@ tools/MapAtmosFixer/MapAtmosFixer/bin/*
 !/config/jukebox_music/sounds/exclude
 /config/title_music/sounds/*
 !/config/title_music/sounds/exclude
+!/config/title_music/sounds/title1.ogg
 /config/title_screens/images/*
 !/config/title_screens/images/exclude
 /data/triumphs.sav
