--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,3 +6,7 @@
 
 /_maps @REAL-Magnum
 /icons @Takyon69
+/code/modules/jobs/job_types @ChungusGamer666
+/code/modules/mob/living/carbon/human @ChungusGamer666
+/code/modules/mob/living/carbon/spirit @NGGJamie
+/code/modules/underworld @NGGJamie
