--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,21 +1,14 @@
 Spriting:
-- changed-files:
-  - any-glob-to-any-file: icons/**
+- icons/**
 
 Mapping:
-- changed-files:
-  - any-glob-to-any-file: _maps/**
+  - _maps/**
 
 documentation:
-- changed-files:
-  - any-glob-to-any-file:
-    - .github/**
-    - README.md
+  - .github/**
+  - README.md
 
 Balance:
-- changed-files:
-  - any-glob-to-any-file:
-    - code/modules/jobs/job_types/roguetown/**
-    - code/modules/clothing/rogueclothes/**
-    - code/game/objects/items/rogueweapons/**
-  
+  - code/modules/jobs/job_types/roguetown/**
+  - code/modules/clothing/rogueclothes/**
+  - code/game/objects/items/rogueweapons/**
