--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,8 +1,11 @@
-name: 'Auto Label'
+name: Labeler
 on: [pull_request]
+
 jobs:
   label:
+
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/labeler@v2
       with:
